fixes scroll behaviour on firefox mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,6 +44,9 @@
 /* --------------------- */
 /* Definições gerais */
 /* --------------------- */
+a {
+  cursor: pointer;
+}
 
 .container {
   max-width: 1440px;
